# CSI_project_DFT_FFT

./: .gitignore  README.md  dft.py  fft.py  gui.py  main.py  mathfce.py  pyproject.toml
algorithms/: __init__.py  dft.py  dft_c.c  dft_c.dylib  dft_libs.py  fft.py  fft_libs.py  mathfce.py
core/: __init__.py  signal_generator.py
